--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "braces": ">=2.3.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.3.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.16.0",
-    "sequelize-cli": "^5.5.0",
-    "jsonwebtoken": "^8.5.1"
+    "sequelize-cli": "^5.5.0"
   }
 }
