--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: '3'
+version: '3.7'
 
 services:
   db:
     image: postgres
   web:
-    build: .
+    build:
+      context: .
+    labels:
+      apiRoute: '/api/v1/users'
     container_name: auth-service
     volumes:
       - .:/usr/src/app
