--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,26 @@ version: '3.7'
 services:
   db:
     image: postgres
+    networks:
+      - auth-service_default
   web:
     build:
       context: .
     labels:
       apiRoute: '/api/v1/users'
     container_name: auth-service
+    # image: gcr.io/summer-hawk-258307/web
+    image: wagubib/microservice:auth
     volumes:
       - .:/usr/src/app
     ports:
       - "3070:3000"
+    networks:
+      - auth-service_default
     depends_on:
+      - db
+      - redis
+    links:
       - db
       - redis
     environment:
@@ -26,3 +35,8 @@ services:
     container_name: cache
     expose:
       - 6379
+    networks:
+      - auth-service_default
+networks:
+  auth-service_default:
+    driver: bridge
