--- a/web-deployment.yaml
+++ b/web-deployment.yaml
@@ -33,8 +33,8 @@ spec:
           value: docker
         - name: REDIS_URL
           value: redis://cache
-        # image: gcr.io/summer-hawk-258307/web
-        image: wagubib/microservice:auth
+        image: gcr.io/summer-hawk-258307/web
+        # image: wagubib/microservice:auth
         name: auth-service
         ports:
         - containerPort: 3000
