--- a/web-service.yaml
+++ b/web-service.yaml
@@ -16,7 +16,7 @@ spec:
     targetPort: 3000
   selector:
     io.kompose.service: web
-  type: LoadBalancer
+  # type: LoadBalancer
 status:
   loadBalancer: {}
 
