--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,20 @@ version: '3.7'
 services:
   db:
     image: postgres
+    restart: always
     networks:
       - auth-service_default
   web:
     build:
       context: .
+    restart: always
     labels:
       apiRoute: '/api/v1/users'
     container_name: auth-service
     # image: gcr.io/summer-hawk-258307/web
     image: wagubib/microservice:auth
-    volumes:
-      - .:/usr/src/app
+    # volumes:
+    #   - .:/usr/src/app
     ports:
       - "3070:3000"
     networks:
@@ -32,6 +34,7 @@ services:
       NODE_ENV: "docker"
   redis:
     image: 'redis:3.2.0'
+    restart: always
     container_name: cache
     expose:
       - 6379
